# gpu_slime_mould

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/shaders/: compute.wgsl  move_slimes.wgsl  shader.wgsl  update_world.wgsl  world_to_tex.wgsl
