[package]
name = "gpu_slime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
pollster = "0.2.4"
rand = "0.8.4"
wgpu = "0.11.0"
winit = "0.25.0"
